--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 					
 					<div id="overlay">
 						<div class="yellowBar"></div>
-						<div id="video"></div>
+						<div id="videomap"></div>
 						<div id="text"></div>
 						<div id="image"></div>
 					</div>
