--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="icon" type="image/x-icon" href="imgs/favicon.ico" />
 		<link href='https://fonts.googleapis.com/css?family=Mr+Dafoe' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
-		<link rel='stylesheet' media='screen and (min-width: 300px)' href='css/main.css' />
+		<link rel='stylesheet' media='screen and (min-width: 300px)' href='css/style.css' />
 		<link rel="stylesheet" type="text/css" href="css/map.css" />
 
 		<script type="text/javascript" src="js/jquery.js"></script>
