--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="keywords" content="JFK, Interactive, Responsive">
 		<meta name="author" content="Groep B">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>JFK</title>
+		<title>The Sworn Commitment of John F. Kennedy</title>
 		<link rel="icon" type="image/x-icon" href="imgs/favicon.ico" />
 		<link href='https://fonts.googleapis.com/css?family=Mr+Dafoe' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
